# ROVMIND

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  bashrc  bashrc_bottom  bashrc_op  bashrc_top  hosts_op  ops_bringup.sh  ops_repo_clone.sh  rostopics.md  rov_bringup.sh  rov_repo_clone.sh  tcu_bringup.sh  tcu_repo_clone.sh
dependencies/diagnostic_msgs/cmake/: diagnostic_msgsConfig.cmake
dependencies/diagnostic_updater/cmake/: diagnostic_updaterConfig-version.cmake
dependencies/geometry_msgs/cmake/: geometry_msgsConfig-version.cmake
documentation_templates/: package_documentation.md
drivers/: hw_thruster_controller_interface.cpp
drivers/classes/PMBus/: README.md  runner.py
drivers/classes/UART/: uart.cpp
drivers/classes/bmp280/: test.py
drivers/classes/sht31/: sht31.py  test.py
ros_workspace/src/: config.json
ros_workspace/src/bmp280/: CMakeLists.txt  (+2 more)
ros_workspace/src/realsense2_description/: CMakeLists.txt  package.xml
ros_workspace/src/realsense2_description/launch/: view_d415_model.launch  view_d435_model.launch
ros_workspace/src/realsense2_description/urdf/: _d435.urdf.xacro  test_d415_camera.urdf.xacro  test_d435_camera.urdf.xacro  test_r410_camera.urdf.xacro  test_r430_camera.urdf.xacro
scripts/: CustomCommands.sh  env.sh  setup.sh
tests/: CHANGES.md  README.md  controllerbinds.md  rostopics.md
tests/Simple Travis Test/: CMakeLists.txt
tests/documentation_templates/: rosdoc.yaml  sketch_documentation.md
tests/scripts/: CustomZshCommands.zsh  GitSetup.sh  setup.zsh  setupROSNetwork.sh  setupROSNetwork.sh.save  sshSetup.sh
(+565 files in other folders)
